# cadoodle-build123d-portable

./: .gitignore  README.md  example.stl  pyproject.toml  userscript.py
.github/actions/setup/: action.yml
.github/workflows/: build.yml
scripts/: path_patch.bat  path_patch.sh
src/build123d_cli/: __main__.py  build123d_cli.py
src/cadexport/: __main__.py  gggears_spur.py
tests/: test_portable.py
