[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cadexport"
version = "0.0.3"
dependencies = [
  fire,
  #"build123d", # keeping all dependencies left out for now
  #"ocp_vscode",
  # "gggears",
]
requires-python = ">= 3.10, < 3.14"
description = "A package to execute a build123d python script and export a resulting shape to an STL"

[project.scripts]
gggears = "cadexport.gggears_spur:main"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["userscript*"]
