[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "build123d_cli"
version = "0.0.4"
dependencies = [
  "fire",
  "build123d>=0.9.1",
  "ocp_vscode",
  #"gggears",
  #"bd_warehouse",
]
requires-python = ">= 3.10, < 3.14"
description = "A package to execute a build123d python script and export a resulting shape to an STL"

[project.scripts]
build123d_cli = "build123d_cli.build123d_cli:main"


[tool.setuptools.packages.find]
where = ["src"]
exclude = ["userscript*"]
