[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "build123d_cli"
version = "0.0.6"
dependencies = [
  "fire",
  "build123d>=0.10.0",
  "ocp_vscode",
  #"py_gearworks",
  #"bd_warehouse",
]
requires-python = ">= 3.10, < 3.14"
description = "A package to execute a build123d python script and export a resulting shape to an STL"

[project.scripts]
build123d_cli = "build123d_cli.build123d_cli:main"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["userscript*"]
